sumo/tests/duarouter/alternatives/style1_input/errors/xml/no_end/errors.duarouter
Error: input ended before all started tags were ended; last tag started is 'route-alternatives'
 In file 'input_alts.rou.alt.xml'
 At line/column 14/1.

Quitting (on error).
